# keyboard-toolbox

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  build.sh  deps.bzl  keyboard.proto  kicad_utils.py  layout.py  make_pcb.py  make_plate.py  make_qmk_header.py  matrix.py  planckish.py  processor.py  pumnad.py  quine-mk1-main-routed.kicad_pcb  quine-mk1-main.ses  quine_mk1.py  requirements.txt  requirements_lock.txt  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  test.yml
examples/: BUILD.bazel  build_60ansi.py  build_numpad.py  build_numpad17.py  build_numpad_layout.py  build_stm32f072_demo.py  build_test_layout.py  build_unisplit42.py  dist.sh
examples/routed/: BUILD.bazel  lcsc_part_numbers.csv  numpad17.kicad_pcb  numpad_board.kicad_pcb
kbtb/: BUILD.bazel  defs.bzl  deps.bzl  dxf.py  keyboard.proto  keyboard.py  kicad.py  kle.py  layout.py  matrix.py  mx_stabilizers.kicad_mod  outline.py  pcb.py  plate.py  qmk.py  repos.bzl  svg.py
kbtb/cli/: BUILD.bazel  bomcpl_from_kicad.py  cli.py  from_kle.py  kicad_to_gerber.py  to_dxf.py  to_kicad.py  to_kle.py  to_qmk.py  to_svg.py
kbtb/kicad_modules/: BUILD.bazel  SW_Cherry_MX_PCB.kicad_mod  Stab_Cherry_MX_2.00u_PCB.kicad_mod  Stab_Cherry_MX_6.25u_PCB.kicad_mod
kbtb/service/: BUILD.bazel  service.py
kbtb/service/templates/: index.html
kbtb/testdata/: BUILD.bazel  build.sh  build_atmega32u4_demo.py  build_min_stm32_layout.py  build_numpad_layout.py  build_stm32f072_demo.py  build_test_layout.py  dist.sh  tkl-kle.json
kbtb/testdata/routed/: BUILD.bazel  atmega32u4_demo.kicad_pcb  numpad_board.kicad_pcb  numpad_board.ses  numpad_board_routed.kicad_pcb
kbtb/tests/: BUILD.bazel  build_all.py
keyboards/kle/: BUILD.bazel  ansi104-kle.json  atrius-kle.json  numpad-kle.json
keyboards/numpad/: layout.py
keyboards/planckish/: BUILD.bazel  layout.py
keyboards/quine_mk1/: BUILD.bazel  layout.py
keyboards/quine_mk2/: BUILD.bazel  board_routed.kicad_pcb  layout.py
toolbox/: BUILD.bazel  defs.bzl  dxf_utils.py  keyboard.proto  keyboard.py  kicad_utils.py  kle_utils.py  layout.py  make_gerbers.py  make_pcb.py  make_plate.py  make_qmk_header.py  matrix.py  outline.py  processor.py  qmk_utils.py  svg.py  test_layout.py  utils.py
toolbox/cli/: BUILD.bazel  cli.py  from_kle.py  kicad_to_gerber.py
toolbox/service/: BUILD.bazel  service.py
toolbox/service/templates/: index.html
toolbox/testdata/: BUILD.bazel  test_layout.py  tkl-kle.json
tools/: workspace-status.sh
