load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "keyboard_py_proto",
    srcs = ["keyboard.proto"],
)

py_library(
    name = "keyboard_lib",
    srcs = [
        "kicad_utils.py",
        "layout.py",
        "make_pcb.py",
        "make_plate.py",
        "utils.py",
    ],
    deps = [
        requirement("shapely"),
        ":keyboard_py_proto",
        "@com_gitlab_kicad_kicad//:pcbnew_python",
        requirement("ezdxf"),
    ],
)

py_binary(
    name = "make_gerbers",
    srcs = [
        "make_gerbers.py",
    ],
    deps = [
        requirement("absl-py"),
        "@com_gitlab_kicad_kicad//:pcbnew_python",
    ],
)

py_binary(
    name = "quine_mk1",
    srcs = [
        "quine_mk1.py",
    ],
    deps = [
        requirement("absl-py"),
        ":keyboard_lib",
    ],
)

genrule(
    name = "quine_mk1_svg",
    outs = ["quine_mk1.svg"],
    cmd = "./$(location //:quine_mk1) --format=svg --output=\"$@\"",
    tools = [":quine_mk1"],
)

genrule(
    name = "quine_mk1_plate_dxf",
    outs = ["quine_mk1_plate.dxf"],
    cmd = "./$(location //:quine_mk1) --format=plate_dxf --output=\"$@\"",
    tools = [":quine_mk1"],
)

genrule(
    name = "quine_mk1_plate_kicad",
    outs = ["quine_mk1_plate.kicad_pcb"],
    cmd = "./$(location //:quine_mk1) --format=plate_kicad_pcb --output=\"$@\"",
    tools = [":quine_mk1"],
)

genrule(
    name = "quine_mk1_plate_gerbers",
    srcs = [":quine_mk1_plate_kicad"],
    outs = ["quine_mk1_plate_gerbers.zip"],
    cmd = "./$(location //:make_gerbers) --input=\"$<\" --output=\"$@\"",
    tools = [":make_gerbers"],
)

genrule(
    name = "quine_mk1_board_kicad",
    srcs = [
        "@com_github_keebio_keebio_parts//:all",
        "@com_gitlab_kicad_libraries_kicad_footprints//:all",
    ],
    outs = ["quine_mk1_board.kicad_pcb"],
    cmd = "./$(location //:quine_mk1) --format=main_kicad_pcb --output=\"$@\"",
    tools = [":quine_mk1"],
)
