load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "keyboard_py_proto",
    srcs = ["keyboard.proto"],
)

py_library(
    name = "keyboard_lib",
    srcs = [
        "layout.py",
        "matrix.py",
        "utils.py",
    ],
    deps = [
        ":keyboard_py_proto",
        requirement("ezdxf"),
        requirement("shapely"),
    ],
)

py_library(
    name = "keyboard_pcb_lib",
    srcs = [
        "kicad_utils.py",
        "make_pcb.py",
        "make_plate.py",
    ],
    deps = [
        ":keyboard_lib",
        "@com_gitlab_kicad_kicad//:pcbnew_python",
    ],
)

py_binary(
    name = "make_gerbers",
    srcs = [
        "make_gerbers.py",
    ],
    deps = [
        requirement("absl-py"),
        "@com_gitlab_kicad_kicad//:pcbnew_python",
    ],
)

py_binary(
    name = "processor",
    srcs = [
        "make_qmk_header.py",
        "processor.py",
    ],
    deps = [
        requirement("absl-py"),
        ":keyboard_pcb_lib",
    ],
)

py_binary(
    name = "quine_mk1",
    srcs = [
        "quine_mk1.py",
    ],
    deps = [
        requirement("absl-py"),
        ":keyboard_lib",
    ],
)

genrule(
    name = "quine_mk1_pb",
    outs = ["quine_mk1.pb"],
    cmd = "./$(location //:quine_mk1) --output=\"$@\"",
    tools = [":quine_mk1"],
)

genrule(
    name = "quine_mk1_svg",
    srcs = [":quine_mk1_pb"],
    outs = ["quine_mk1.svg"],
    cmd = "./$(location //:processor) --input=\"$<\" --format=svg --output=\"$@\"",
    tools = [":processor"],
)

genrule(
    name = "quine_mk1_plate_dxf",
    srcs = [":quine_mk1_pb"],
    outs = ["quine_mk1_plate.dxf"],
    cmd = "./$(location //:processor) --input=\"$<\" --format=plate_dxf --output=\"$@\"",
    tools = [":processor"],
)

genrule(
    name = "quine_mk1_plate_kicad",
    srcs = [":quine_mk1_pb"],
    outs = ["quine_mk1_plate.kicad_pcb"],
    cmd = "./$(location //:processor) --input=\"$<\" --format=plate_kicad_pcb --output=\"$@\"",
    tools = [":processor"],
)

genrule(
    name = "quine_mk1_plate_gerbers",
    srcs = [":quine_mk1_plate_kicad"],
    outs = ["quine_mk1_plate_gerbers.zip"],
    cmd = "./$(location //:make_gerbers) --input=\"$<\" --output=\"$@\"",
    tools = [":make_gerbers"],
)

genrule(
    name = "quine_mk1_board_kicad",
    srcs = [":quine_mk1_pb"],
    outs = ["quine_mk1_board.kicad_pcb"],
    cmd = "./$(location //:processor) --input=\"$<\" --format=main_kicad_pcb --output=\"$@\"",
    tools = [
        ":processor",
        "@com_github_keebio_keebio_parts//:all",
        "@com_gitlab_kicad_libraries_kicad_footprints//:all",
    ],
)
