load("@rules_python//python:defs.bzl", "py_binary")
load("@com_github_kleinpa_keyboardtoolbox_py_deps//:requirements.bzl", "requirement")
load("//kbtb:defs.bzl", "build_keyboard", "kbpb_from_kle", "qmk_keyboard")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

py_binary(
    name = "build_unisplit42",
    srcs = ["build_unisplit42.py"],
    deps = [
        requirement("absl-py"),
        "//kbtb:keyboard_lib",
    ],
)

genrule(
    name = "unisplit42_proto",
    outs = ["unisplit42.pb"],
    cmd = "./$(execpath :build_unisplit42) --output=\"$@\"",
    exec_tools = [":build_unisplit42"],
    visibility = ["//visibility:public"],
)

build_keyboard(
    name = "unisplit42",
    src = ":unisplit42_proto",
)

qmk_keyboard(
    name = "unisplit42_qmk",
    src = ":unisplit42_proto",
)

pkg_tar(
    name = "unisplit42_tar",
    srcs = [
        "unisplit42.h",
        "unisplit42.kicad_pcb",
        "unisplit42.svg",
    ],
)

kbpb_from_kle(
    name = "tkl_proto",
    src = "tkl-kle.json",
    visibility = ["//visibility:public"],
)

build_keyboard(
    name = "tkl",
    src = ":tkl_proto",
)

py_binary(
    name = "build_numpad17",
    srcs = ["build_numpad17.py"],
    deps = [
        requirement("absl-py"),
        "//kbtb:keyboard_lib",
        "//kbtb:kle",
    ],
)

genrule(
    name = "numpad17_proto",
    outs = ["numpad17.pb"],
    cmd = "./$(execpath :build_numpad17) --output=\"$@\"",
    exec_tools = [":build_numpad17"],
    visibility = ["//visibility:public"],
)

build_keyboard(
    name = "numpad17",
    src = ":numpad17_proto",
)

qmk_keyboard(
    name = "numpad17_qmk",
    src = ":numpad17_proto",
)

pkg_tar(
    name = "numpad17_tar",
    srcs = [
        "numpad17.kicad_pcb",
        "numpad17.svg",
        "numpad17_plate_bottom.dxf",
        "numpad17_plate_bottom.kicad_pcb",
        "numpad17_plate_top.dxf",
        "numpad17_plate_top.kicad_pcb",
    ],
)

py_binary(
    name = "build_stm32f072_demo",
    srcs = ["build_stm32f072_demo.py"],
    deps = [
        requirement("absl-py"),
        "//kbtb:keyboard_lib",
        "//kbtb:kle",
    ],
)

genrule(
    name = "stm32f072_demo_proto",
    outs = ["stm32f072_demo.pb"],
    cmd = "./$(execpath :build_stm32f072_demo) --output=\"$@\"",
    exec_tools = [":build_stm32f072_demo"],
    visibility = ["//visibility:public"],
)

build_keyboard(
    name = "stm32f072_demo",
    src = ":stm32f072_demo_proto",
)
