load("@rules_python//python:defs.bzl", "py_library")
load("@my_deps//:requirements.bzl", "requirement")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "keyboard_py_proto",
    srcs = ["keyboard.proto"],
)

py_library(
    name = "keyboard_lib",
    srcs = [
        "keyboard.py",
        "layout.py",
        "make_plate.py",
        "matrix.py",
        "utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":keyboard_py_proto",
        requirement("shapely"),
    ],
)

py_library(
    name = "keyboard_pcb_lib",
    srcs = [
        "make_pcb.py",
    ],
    data = [
        "@com_github_keebio_keebio_parts//:all",
        "@com_gitlab_kicad_libraries_kicad_footprints//:all",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":keyboard_lib",
        ":kicad_utils",
        "@com_gitlab_kicad_kicad//:pcbnew_python",
    ],
)

py_library(
    name = "kicad_utils",
    srcs = [
        "kicad_utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_gitlab_kicad_kicad//:pcbnew_python",
    ],
)

py_library(
    name = "dxf_utils",
    srcs = [
        "dxf_utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("ezdxf"),
    ],
)

py_library(
    name = "qmk_utils",
    srcs = [
        "qmk_utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("ezdxf"),
    ],
)

py_library(
    name = "svg_utils",
    srcs = [
        "svg.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":keyboard_lib",
    ],
)
