load("@com_github_kleinpa_kicadbazel//tools:defs.bzl", "kicad_bom", "kicad_gerbers")

kicad_gerbers(
    name = "numpad",
    src = "numpad.kicad_pcb",
    visibility = ["//visibility:public"],
)

kicad_bom(
    name = "numpad_bom",
    src = "numpad.kicad_pcb",
    fields = [
        "Designator",
        "Package",
        "Value",
        "LCSC Part Number",
    ],
    part_info_file = "lcsc_part_numbers.csv",
)

kicad_bom(
    name = "numpad_cpl",
    src = "numpad.kicad_pcb",
    fields = [
        "Designator",
        "Mid X",
        "Mid Y",
        "Rotation",
        "Layer",
    ],
)

kicad_gerbers(
    name = "atmega32u4_demo",
    src = "atmega32u4_demo.kicad_pcb",
)
