load("@rules_kicad//tools:defs.bzl", "kicad_bom", "kicad_gerbers")

kicad_gerbers(
    name = "numpad17",
    src = "numpad17.kicad_pcb",
    visibility = ["//visibility:public"],
)

kicad_bom(
    name = "numpad17_bom",
    src = "numpad17.kicad_pcb",
    component_file = "lcsc_part_numbers.csv",
    fields = [
        "Designator",
        "Package",
        "Value",
        "LCSC Part Number",
    ],
)

kicad_bom(
    name = "numpad17_cpl",
    src = "numpad17.kicad_pcb",
    component_file = "lcsc_part_numbers.csv",
    fields = [
        "Designator",
        "Value",
        "Package",
        "Mid X",
        "Mid Y",
        "Rotation",
        "Layer",
    ],
)

kicad_gerbers(
    name = "atmega32u4_demo",
    src = "atmega32u4_demo.kicad_pcb",
)
