load("//toolbox:defs.bzl", "kbpb_from_kle")

kbpb_from_kle(
    name = "ansi104_layout_pb",
    src = "ansi104-kle.json",
)

kbpb_from_kle(
    name = "atrius_layout_pb",
    src = "atrius-kle.json",
)

kbpb_from_kle(
    name = "numpad_layout_pb",
    src = "numpad-kle.json",
)

filegroup(
    name = "kle",
    srcs = [
        ":ansi104_layout_pb",
        ":atrius_layout_pb",
        ":numpad_layout_pb",
    ],
    visibility = ["//visibility:public"],
)
