load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")

py_binary(
    name = "layout",
    srcs = [
        "layout.py",
    ],
    deps = [
        requirement("absl-py"),
        "//toolbox:keyboard_lib",
    ],
)

genrule(
    name = "layout_pb",
    outs = ["layout.pb"],
    cmd = "./$(location :layout) --output=\"$@\"",
    tools = [":layout"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "layout_svg",
    srcs = [":layout_pb"],
    outs = ["layout.svg"],
    cmd = "./$(location //toolbox/cli) --input=\"$<\" --format=svg --output=\"$@\"",
    tools = ["//toolbox/cli"],
)

genrule(
    name = "board_kicad",
    srcs = [":layout_pb"],
    outs = ["board.kicad_pcb"],
    cmd = "./$(location //toolbox/cli) --input=\"$<\" --format=main_kicad_pcb --output=\"$@\"",
    tools = [
        "//toolbox/cli",
        "@com_github_keebio_keebio_parts//:all",
        "@com_gitlab_kicad_libraries_kicad_footprints//:all",
    ],
)

genrule(
    name = "qmk_header",
    srcs = [":layout_pb"],
    outs = ["qmk_header.h"],
    cmd = "./$(location //toolbox/cli) --input=\"$<\" --format=h --output=\"$@\"",
    tools = ["//toolbox/cli"],
)
