load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")

py_binary(
    name = "cli",
    srcs = [
        "cli.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        "//toolbox:dxf_utils",
        "//toolbox:keyboard_pcb_lib",
        "//toolbox:qmk_utils",
        "//toolbox:svg_utils",
    ],
)

py_binary(
    name = "from_kle",
    srcs = [
        "from_kle.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        "//toolbox:keyboard_lib",
        "//toolbox:kle_utils",
    ],
)

py_binary(
    name = "kicad_to_gerber",
    srcs = [
        "kicad_to_gerber.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        "//toolbox:kicad_utils",
    ],
)
