load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")

py_binary(
    name = "service",
    srcs = ["service.py"],
    data = [
        ":service_templates",
        "//keyboards/kle",
        "//keyboards/planckish:layout_pb",
        "//keyboards/quine_mk1:layout_pb",
        "//keyboards/quine_mk2:layout_pb",
        "//toolbox/testdata:test_layout_pb",
        "//toolbox/testdata:tkl_layout_pb",
    ],
    deps = [
        requirement("absl-py"),
        requirement("Flask"),
        "//toolbox:dxf_utils",
        "//toolbox:keyboard_pcb_lib",
        "//toolbox:kle_utils",
        "//toolbox:qmk_utils",
        "//toolbox:svg_utils",
        "@com_google_protobuf//:protobuf_python",
    ],
)

filegroup(
    name = "service_templates",
    srcs = glob([
        "templates/*",
    ]),
)
