load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")

py_binary(
    name = "test_layout",
    srcs = [
        "test_layout.py",
    ],
    deps = [
        requirement("absl-py"),
        "//toolbox:keyboard_lib",
    ],
)

genrule(
    name = "test_layout_pb",
    outs = ["test_layout.pb"],
    cmd = "./$(location :test_layout) --output=\"$@\"",
    tools = [":test_layout"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test_layout_svg",
    srcs = [":test_layout_pb"],
    outs = ["test_layout.svg"],
    cmd = "./$(location //toolbox/cli) --input=\"$<\" --format=svg --output=\"$@\"",
    tools = ["//toolbox/cli"],
)

genrule(
    name = "tkl_layout_pb",
    srcs = ["tkl-kle.json"],
    outs = ["tkl_layout.pb"],
    cmd = "./$(location //toolbox/cli:from_kle) --input=\"$<\" --output=\"$@\"",
    tools = ["//toolbox/cli:from_kle"],
    visibility = ["//visibility:public"],
)
